# IMU_ICM42670_P

./: README.md
embedded_hal_icm42670_p/: Cargo.toml
embedded_hal_icm42670_p/src/: icm42670_p_driver.rs  lib.rs  reg.rs
