[package]
name = "embedded_hal_icm42670_p"
version = "0.1.0"
edition = "2024"

[features]
default = ["use_std"]
use_std = []

[dependencies]
embedded-hal = "1.0.0"


[profile.release]
opt-level = 3         # Optimize for maximum execution speed
lto = "fat"           # Enable the most aggressive Link Time Optimization
codegen-units = 1     # Reduce the number of code generation units, increasing optimization time but improving performance
panic = "abort"       # Use 'abort' instead of 'unwind' for panic handling
debug = true          # Allows defmt to display log locations even in release

[profile.dev]
opt-level = 0         # Optimize for debugging
lto = true            # Enable Link Time Optimization (LTO)
panic = "abort"       # Use 'abort' instead of 'unwind' for panic handling
debug = true          # Allows defmt to display log locations even in release


